--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "password-generator",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://skhosla8.github.io/password-generator",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -10,6 +11,7 @@
     "@types/node": "^16.18.51",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-slider": "^6.0.1",
@@ -19,6 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
